# gpt-server-rs

./: .gitignore  Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yaml
src/: config.rs  main.rs
src/handlers/: mod.rs  openai_handler.rs
src/models/: prompt.rs
src/routes/: claude.rs  gemini.rs  mod.rs  openai.rs
src/services/: mod.rs  openai_service.rs
