[package]
name = "gpt-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.5.1"
reqwest = { version = "0.11", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
dotenv = "0.15"
futures = "0.3"
log = "0.4"
env_logger = "0.10"
